css: fix spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -102,6 +102,7 @@ body {
 
       .sm-btn-outline {
         padding: 4px 8px;
+        margin-left: 24px ;
       }
 
       .sm-input {
